Fix bugs title product on mobile

--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -10,6 +10,7 @@
         font-weight: 600;
         letter-spacing: 1px;
         user-select: none;
+        text-align: center;
 
         .new {
             margin-left: 4px;
